--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <body>
 
-<h1>By x people riding their bikes today...<br>
-We've saved 10x kgs of CO<sub>2</sub>!</h1>
+<p>By x people riding their bikes today...<br>
+We've saved 10x kgs of CO<sub>2</sub>!</p>
 
 
 </body>
