--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <body>
 
-<p>By x people riding their bikes today...<br>
-We've saved 10x kgs of CO<sub>2</sub>!</p>
+<p>By <b><span class='bigger'>x</span></b> people riding their bikes today...<br>
+We've saved <b><span class='bigger'> 10x</span></b> kgs of CO<sub>2</sub> emissions!</p>
 
 
 </body>
