--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <p>By <b><span class='bigger'>x</span></b> people riding their bikes today...<br>
-We've saved <b><span class='bigger'> 10x</span></b> kgs of CO<sub>2</sub> emissions!</p>
+We've saved <b><span class='bigger'> 10x</span></b> kgs in CO<sub>2</sub> emissions!</p>
 
 
 </body>
